--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -24,7 +24,7 @@
         ?>
     </head>
     <body>
-        <?= $this->render('menu/menu.phtml'); ?>
+        <!--<?= $this->render('menu/menu.phtml'); ?>-->
         <div class="container">
             <?= $this->content ?>
             <hr>
