--- a/module/Application/view/application/user/login.phtml
+++ b/module/Application/view/application/user/login.phtml
@@ -1,2 +1,8 @@
-<?php
-var_dump($this->repo);
+<div class="row">
+    <div class="col-md-6">
+        
+    </div>
+    <div class="col-md-6">
+        
+    </div>
+</div>
