login/register/recover_password action

--- a/app/views/user/login.phtml
+++ b/app/views/user/login.phtml
@@ -5,9 +5,8 @@
     <div class="panel-body">
         <?= $this->tag->form(
             [
-                'user/login',
+                '/user/login',
                 'method' => "post",
-                'id' => "loginform",
                 'class' => "async"
             ]
         )
