--- a/app/views/user/register.phtml
+++ b/app/views/user/register.phtml
@@ -5,9 +5,8 @@
     <div class="panel-body">
         <?= $this->tag->form(
             [
-                'user/register',
+                '/user/register',
                 'method' => "post",
-                'id' => "loginform",
                 'class' => "async"
             ]
         )
