--- a/app/views/user/forgotPassword.phtml
+++ b/app/views/user/forgotPassword.phtml
@@ -2,9 +2,8 @@
     <div class="col-md-offset-3 col-md-6">
         <?= $this->tag->form(
             [
-                'user/forgotPassword',
+                '/user/forgotPassword',
                 'method' => "post",
-                'id' => "loginform",
                 'class' => "async"
             ]
         )
@@ -17,6 +16,6 @@
             <div class="text-right">
                 <button class="btn btn-default">Send me recovery link to email</button>
             </div>
-        </form>
+        <?= $this->tag->endForm() ?>
     </div>
 </div>
