--- a/app/views/user/recoverPassword.phtml
+++ b/app/views/user/recoverPassword.phtml
@@ -1,12 +1,22 @@
-<?= $this->tag->form('recoverPassword'); ?>
-    <input type="hidden" name="hash" value="<?= $this->view->hash ?>">
-<p>
-    <label for="password">
-        New Password
-    </label>
-    <?= $this->tag->passwordField('password'); ?>
-</p>
-<p>
-    <?= $this->tag->submitButton('Change password'); ?>
-</p>
-<?= $this->tag->endForm() ?>
+<div class="row">
+    <div class="col-md-offset-3 col-md-6">
+        <?= $this->tag->form(
+            [
+                '/recoverPassword',
+                'method' => "post",
+                'class' => "async"
+            ]
+        )
+        ?>
+            <input type="hidden" name="hash" value="<?= $this->view->hash ?>">
+            <div class="form-group">
+                <label for="password">New Password</label>
+                <input type="password" name="password" id="password" class="form-control">
+            </div>
+            <hr>
+            <div class="text-right">
+                <button class="btn btn-default">Change password</button>
+            </div>
+        <?= $this->tag->endForm() ?>
+    </div>
+</div>
