--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <link rel="icon" href="../img/floppy.ico">
+    <title>Floppy.net</title>
 
     <!-- Bootstrap -->
     <?= $this->tag->stylesheetLink('css/bootstrap.min.css'); ?>
+    <?= $this->tag->stylesheetLink('css/signin.css'); ?>
+    <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Jura'); ?>
+    <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Audiowide'); ?>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
