--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,9 +1,4 @@
 <ul>
-    <?php if ($this->session->has('user_identity')): ?>
-        <li><?= $this->tag->linkTo('/user/logout', 'Logout') ?></li>
-    <?php else: ?>
-        <li><?= $this->tag->linkTo('/user/login', 'Sign in') ?></li>
-        <li><?= $this->tag->linkTo('/user/register', 'Sign up') ?></li>
-        <li><?= $this->tag->linkTo('/user/forgotPassword', 'Forgot password?') ?></li>
-    <?php endif; ?>
+    <li><?= $this->tag->linkTo('/user/logout', 'Logout') ?></li>
+    <img src="<?= $this->view->url ?>" style="width: 100px">
 </ul>
