--- a/app/views/user/login.phtml
+++ b/app/views/user/login.phtml
@@ -32,6 +32,7 @@
         <div class="form-group">
             <label for="inputPassword" class="sr-only">Password</label>
             <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Пароль">
+            <span class="eye glyphicon glyphicon-eye-open"></span>
         </div>
         <button style="margin-top: 15px" class="btn btn-lg btn-primary btn-block" type="submit"><i class="glyphicon glyphicon-log-in"></i>Увійти</button>
         <a href="/user/register" class="btn btn-lg btn-primary btn-block"><i class="glyphicon glyphicon-user"></i>Зареєструватися</a>
