--- a/app/views/user/register.phtml
+++ b/app/views/user/register.phtml
@@ -23,6 +23,10 @@
                 <label for="password_field">Password</label>
                 <input type="password" name="password" id="password_field" class="form-control">
             </div>
+            <div class="form-group">
+                <label for="password_field">Confirm password</label>
+                <input type="password" name="confirmPassword" id="confirm_password_field" class="form-control">
+            </div>
             <div class="form-group button-block text-right">
                 <div class="col-sm-12 controls">
                     <button class="btn btn-default">Sign Up</button>
