drag and drop file

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,4 +1,9 @@
-<ul>
-    <li><?= $this->tag->linkTo('/user/logout', 'Logout') ?></li>
-    <img src="<?= $this->view->url ?>" style="width: 100px">
-</ul>
+<i class="glyphicon glyphicon-cloud-upload" id="upload" style="background: white; font-size: 100px"></i>
+<div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+
+        </div>
+    </div>
+</div>
