--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -10,7 +10,9 @@
 
     <!-- Bootstrap -->
     <?= $this->tag->stylesheetLink('css/bootstrap.min.css'); ?>
+    <?= $this->tag->stylesheetLink('css/dropzone.min.css'); ?>
     <?= $this->tag->stylesheetLink('css/signin.css'); ?>
+    <?= $this->tag->stylesheetLink('css/typeahead.css'); ?>
     <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Jura'); ?>
     <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Audiowide'); ?>
 
@@ -23,13 +25,16 @@
 </head>
 <body>
 
-<?= $this->view->getContent() ?>
+<?= $this->getContent() ?>
 <?= $this->flashSession->output(); ?>
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <?= $this->tag->javascriptInclude('https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js') ?>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <?= $this->tag->javascriptInclude('js/bootstrap.min.js') ?>
+<?= $this->tag->javascriptInclude('js/dropzone.min.js') ?>
 <?= $this->tag->javascriptInclude('js/app.js') ?>
+<?= $this->tag->javascriptInclude('js/typeahead.js') ?>
 </body>
 </html>
