--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -7,3 +7,6 @@
         </div>
     </div>
 </div>
+    <div id="the-basics">
+        <input class="typeahead" type="text" placeholder="States of USA">
+    </div>
