--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,7 +1,8 @@
 body {
-  padding-top: 40px;
+  /**padding-top: 40px;
   padding-bottom: 40px;
   background: url('../img/bgmain.jpg') repeat;
+  **/
 }
 .form-signin {
   max-width: 330px;
