--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,70 +1,99 @@
-<div id="actions" class="row">
-
-    <div class="col-lg-7">
-        <!-- The fileinput-button span is used to style the file input field as button -->
-        <span class="btn btn-success fileinput-button">
-            <i class="glyphicon glyphicon-plus"></i>
-            <span>Add files...</span>
-        </span>
-        <button type="submit" class="btn btn-primary start">
-            <i class="glyphicon glyphicon-upload"></i>
-            <span>Start upload</span>
-        </button>
-        <button type="reset" class="btn btn-warning cancel">
-            <i class="glyphicon glyphicon-ban-circle"></i>
-            <span>Cancel upload</span>
-        </button>
-    </div>
-
-    <div class="col-lg-5">
-        <!-- The global file processing state -->
-        <span class="fileupload-process">
-          <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
-            <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>
-          </div>
-        </span>
-    </div>
-
-</div>
-
-
-
-
-
-
-
-
-<div class="table table-striped files" id="previews">
-
-    <div id="template" class="file-row">
-        <!-- This is used as the file preview template -->
-        <div>
-            <span class="preview"><img data-dz-thumbnail /></span>
-        </div>
-        <div>
-            <p class="name" data-dz-name></p>
-            <strong class="error text-danger" data-dz-errormessage></strong>
-        </div>
-        <div>
-            <p class="size" data-dz-size></p>
-            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
-                <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>
+<i id="upload" style="background: white; font-size: 100px" class="glyphicon glyphicon-cloud-upload" data-toggle="modal" data-target="#myModal"></i>
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Upload files</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/file/upload" class="dropzone" id="my-awesome-dropzone">
+                    <div class="fallback">
+                        <input name="file" type="file" multiple />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-default start">
+                    <span>Загрузити</span>
+                </button>
             </div>
         </div>
-        <div>
-            <button class="btn btn-primary start">
-                <i class="glyphicon glyphicon-upload"></i>
-                <span>Start</span>
-            </button>
-            <button data-dz-remove class="btn btn-warning cancel">
-                <i class="glyphicon glyphicon-ban-circle"></i>
-                <span>Cancel</span>
-            </button>
-            <button data-dz-remove class="btn btn-danger delete">
-                <i class="glyphicon glyphicon-trash"></i>
-                <span>Delete</span>
-            </button>
-        </div>
     </div>
-
 </div>
+<!--<div class="modal fade" id="myModal" role="dialog">-->
+<!--    <div class="modal-dialog">-->
+<!--        <div class="modal-content">-->
+<!--            <div class="modal-header">-->
+<!--                <button type="button" class="close" data-dismiss="modal">&times;</button>-->
+<!--                <h4 class="modal-title">Upload files</h4>-->
+<!--            </div>-->
+<!--            <div class="modal-body">-->
+<!--                <div id="upload" style="height: 200px; border: 1px solid silver; border-radius: 2px">-->
+<!---->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="modal-footer">-->
+<!--                <button type="submit" class="btn btn-default start">-->
+<!--                    <span>Загрузити</span>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div id="actions" class="row">-->
+<!---->
+<!---->
+<!--        <i style="background: white; font-size: 100px" class="glyphicon glyphicon-cloud-upload" data-toggle="modal" data-target="#myModal"></i>-->
+<!---->
+<!--    <div class="col-lg-5">-->
+<!--        <span class="fileupload-process">-->
+<!--          <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">-->
+<!--            <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>-->
+<!--          </div>-->
+<!--        </span>-->
+<!--    </div>-->
+<!---->
+<!--</div>-->
+<!---->
+<!---->
+<!---->
+<!---->
+<!---->
+<!---->
+<!---->
+<!---->
+<!--<div class="table table-striped files" id="previews">-->
+<!---->
+<!--    <div id="template" class="file-row">-->
+<!--        <!-- This is used as the file preview template -->-->
+<!--        <div>-->
+<!--            <span class="preview"><img data-dz-thumbnail /></span>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <p class="name" data-dz-name></p>-->
+<!--            <strong class="error text-danger" data-dz-errormessage></strong>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <p class="size" data-dz-size></p>-->
+<!--            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">-->
+<!--                <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <button class="btn btn-primary start">-->
+<!--                <i class="glyphicon glyphicon-upload"></i>-->
+<!--                <span>Start</span>-->
+<!--            </button>-->
+<!--            <button data-dz-remove class="btn btn-warning cancel">-->
+<!--                <i class="glyphicon glyphicon-ban-circle"></i>-->
+<!--                <span>Cancel</span>-->
+<!--            </button>-->
+<!--            <button data-dz-remove class="btn btn-danger delete">-->
+<!--                <i class="glyphicon glyphicon-trash"></i>-->
+<!--                <span>Delete</span>-->
+<!--            </button>-->
+<!--        </div>-->
+<!--    </div>-->
+<!---->
+<!--</div>-->
