typeahead search template

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -21,6 +21,9 @@
         </div>
     </div>
 </div>
+<div id="the-basics">
+    <input class="typeahead" type="text" placeholder="States of USA">
+</div>
 <!--<div class="modal fade" id="myModal" role="dialog">-->
 <!--    <div class="modal-dialog">-->
 <!--        <div class="modal-content">-->
@@ -66,7 +69,7 @@
 <!--<div class="table table-striped files" id="previews">-->
 <!---->
 <!--    <div id="template" class="file-row">-->
-<!--        <!-- This is used as the file preview template -->-->
+<!--        <!-- This is used as the file preview template -->
 <!--        <div>-->
 <!--            <span class="preview"><img data-dz-thumbnail /></span>-->
 <!--        </div>-->
