--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -36,5 +36,6 @@
 <?= $this->tag->javascriptInclude('js/dropzone.min.js') ?>
 <?= $this->tag->javascriptInclude('js/app.js') ?>
 <?= $this->tag->javascriptInclude('js/typeahead.js') ?>
+<?= $this->tag->javascriptInclude('js/handlebars.js') ?>
 </body>
 </html>
