update project files

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -9,7 +9,7 @@
             <div class="modal-body">
                 <form action="/file/upload" class="dropzone" id="my-awesome-dropzone">
                     <div class="fallback">
-                        <input name="file" type="file" multiple />
+                        <input name="file" type="file" />
                     </div>
                 </form>
             </div>
@@ -21,51 +21,23 @@
         </div>
     </div>
 </div>
-<div id="the-basics">
-    <input class="typeahead" type="text" placeholder="States of USA">
-</div>
-<!--<div class="modal fade" id="myModal" role="dialog">-->
-<!--    <div class="modal-dialog">-->
-<!--        <div class="modal-content">-->
-<!--            <div class="modal-header">-->
-<!--                <button type="button" class="close" data-dismiss="modal">&times;</button>-->
-<!--                <h4 class="modal-title">Upload files</h4>-->
-<!--            </div>-->
-<!--            <div class="modal-body">-->
-<!--                <div id="upload" style="height: 200px; border: 1px solid silver; border-radius: 2px">-->
-<!---->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="modal-footer">-->
-<!--                <button type="submit" class="btn btn-default start">-->
-<!--                    <span>Загрузити</span>-->
-<!--                </button>-->
-<!--            </div>-->
+
+<!--<div id="template-preview">-->
+<!--    <div class="dz-preview dz-file-preview well" id="dz-preview-template">-->
+<!--        <div class="dz-details">-->
+<!--            <div class="dz-filename"><span data-dz-name></span></div>-->
+<!--            <div class="dz-size" data-dz-size></div>-->
 <!--        </div>-->
+<!--        <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress></span></div>-->
+<!--        <div class="dz-success-mark"><span></span></div>-->
+<!--        <div class="dz-error-mark"><span></span></div>-->
+<!--        <div class="dz-error-message"><span data-dz-errormessage></span></div>-->
 <!--    </div>-->
 <!--</div>-->
-<!--<div id="actions" class="row">-->
-<!---->
-<!---->
-<!--        <i style="background: white; font-size: 100px" class="glyphicon glyphicon-cloud-upload" data-toggle="modal" data-target="#myModal"></i>-->
-<!---->
-<!--    <div class="col-lg-5">-->
-<!--        <span class="fileupload-process">-->
-<!--          <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">-->
-<!--            <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>-->
-<!--          </div>-->
-<!--        </span>-->
-<!--    </div>-->
-<!---->
-<!--</div>-->
-<!---->
-<!---->
-<!---->
-<!---->
-<!---->
-<!---->
-<!---->
-<!---->
+
+
+
+
 <!--<div class="table table-striped files" id="previews">-->
 <!---->
 <!--    <div id="template" class="file-row">-->
