--- a/app/views/layouts/index.phtml
+++ b/app/views/layouts/index.phtml
@@ -18,6 +18,12 @@
                 <li><a href="#">Link1</a></li>
                 <li><a href="#">Link2</a></li>
             </ul>
+            <form method="post" action="/note/show" id="the-basics" class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input name="name" class="typeahead form-control" type="text" placeholder="Користувач">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
             <ul class="nav navbar-nav navbar-right">
                 <li><a style="font-size: 35px" class="glyphicon glyphicon-log-out" href="/user/logout"></a></li>
             </ul>
