view hierarchy add

--- a/app/views/layouts/index.phtml
+++ b/app/views/layouts/index.phtml
@@ -1,33 +1,2 @@
-<nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/index/index">FLOPPY.net</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link1</a></li>
-                <li><a href="#">Link2</a></li>
-            </ul>
-            <form method="post" action="/note/show" id="the-basics" class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input name="name" class="typeahead form-control" type="text" placeholder="Користувач">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a style="font-size: 35px" class="glyphicon glyphicon-log-out" href="/user/logout"></a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<?= $this->view->partial('menu/menu') ?>
 <?= $this->getContent() ?>
