--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -11,10 +11,11 @@
     <!-- Bootstrap -->
     <?= $this->tag->stylesheetLink('css/bootstrap.min.css'); ?>
     <?= $this->tag->stylesheetLink('css/dropzone.min.css'); ?>
-    <?= $this->tag->stylesheetLink('css/signin.css'); ?>
     <?= $this->tag->stylesheetLink('css/typeahead.css'); ?>
+    <?= $this->tag->stylesheetLink('css/common.css'); ?>
     <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Jura'); ?>
     <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Audiowide'); ?>
+    <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=PT+Sans+Caption:700'); ?>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
