--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,11 +1,91 @@
-<i id="upload" style="background: white; font-size: 100px" class="glyphicon glyphicon-cloud-upload" data-toggle="modal" data-target="#myModal"></i>
-<div class="modal fade" id="myModal" role="dialog">
+<div class="container">
+    <div class="content">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="row pic">
+                    <div class="col-md-12">
+                        <?
+                            $type = ['.jpg', '.gif', '.png'];
+                            foreach ($type as $item) {
+                                $path = '/img/userImages/user_img_' . $user->getId() . $item;
+                                if (file_exists(BASE_PATH . '/public' .  $path)) {
+                                    $src = $path;
+                                } else {
+                                    $gravatar = $this->getDi()->getShared('gravatar');
+                                    $src = $gravatar->getAvatar($user->getEmail());
+                                }
+                            }
+                        ?>
+                        <img src='<?= $src ?>' alt="" class="img-thumbnail center_img">
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-md-12 nick_name">
+                        <?= $user->getName() ?>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-9 cont">
+                <div class="row add">
+                    <div class="col-md-1 text-center first">
+                        <button id="upload" type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">
+                            <i class="glyphicon glyphicon-paperclip"></i>
+                        </button>
+                    </div>
+                    <form action='/note/create' method="post" class="form-signin async">
+                        <div class="col-md-10">
+                            <div class="form-group description">
+                                <input type="hidden" name="file" value="">
+                                <input class="form-control input-lg" id="ex1" name="desc" type="text" placeholder="Опис файлу">
+                            </div>
+                        </div>
+                        <div class="col-md-1 text-center first">
+                            <button type="submit" class="btn btn-default">
+                                <i class="glyphicon glyphicon-send"></i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="wall">
+                    <div class="added_file_block">
+                        <div class="row added">
+                            <div class="col-md-1 text-center first">
+                                <i class="glyphicon glyphicon-floppy-saved"></i>
+                            </div>
+
+                            <div class="col-md-10">
+                                <div class="description">
+
+                                </div>
+                            </div>
+
+                            <div class="col-md-1 text-center first">
+                                <form action='/file/download' method="post">
+                                    <input type="hidden" name="fileName" value="DSC_0145.jpg">
+                                    <button type="submit" class="btn btn-default">
+                                        <i class="glyphicon glyphicon-save"></i>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="myModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Upload files</h4>
             </div>
+
             <div class="modal-body">
                 <form action="/file/upload" class="dropzone" id="my-awesome-dropzone">
                     <div class="fallback">
@@ -13,6 +93,7 @@
                     </div>
                 </form>
             </div>
+
             <div class="modal-footer">
                 <button type="submit" class="btn btn-default start">
                     <span>Загрузити</span>
@@ -21,54 +102,3 @@
         </div>
     </div>
 </div>
-
-<!--<div id="template-preview">-->
-<!--    <div class="dz-preview dz-file-preview well" id="dz-preview-template">-->
-<!--        <div class="dz-details">-->
-<!--            <div class="dz-filename"><span data-dz-name></span></div>-->
-<!--            <div class="dz-size" data-dz-size></div>-->
-<!--        </div>-->
-<!--        <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress></span></div>-->
-<!--        <div class="dz-success-mark"><span></span></div>-->
-<!--        <div class="dz-error-mark"><span></span></div>-->
-<!--        <div class="dz-error-message"><span data-dz-errormessage></span></div>-->
-<!--    </div>-->
-<!--</div>-->
-
-
-
-
-<!--<div class="table table-striped files" id="previews">-->
-<!---->
-<!--    <div id="template" class="file-row">-->
-<!--        <!-- This is used as the file preview template -->
-<!--        <div>-->
-<!--            <span class="preview"><img data-dz-thumbnail /></span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <p class="name" data-dz-name></p>-->
-<!--            <strong class="error text-danger" data-dz-errormessage></strong>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <p class="size" data-dz-size></p>-->
-<!--            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">-->
-<!--                <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <button class="btn btn-primary start">-->
-<!--                <i class="glyphicon glyphicon-upload"></i>-->
-<!--                <span>Start</span>-->
-<!--            </button>-->
-<!--            <button data-dz-remove class="btn btn-warning cancel">-->
-<!--                <i class="glyphicon glyphicon-ban-circle"></i>-->
-<!--                <span>Cancel</span>-->
-<!--            </button>-->
-<!--            <button data-dz-remove class="btn btn-danger delete">-->
-<!--                <i class="glyphicon glyphicon-trash"></i>-->
-<!--                <span>Delete</span>-->
-<!--            </button>-->
-<!--        </div>-->
-<!--    </div>-->
-<!---->
-<!--</div>-->
