--- a/app/views/menu/menu.phtml
+++ b/app/views/menu/menu.phtml
@@ -1,34 +1,61 @@
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">FLOPPY.net</a>
+            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link1</a></li>
-                <li><a href="#">Link2</a></li>
+
+                <li><a href="/">Моя сторінка</a></li>
+                <li><a href="" data-toggle="modal" data-target="#t_and_c_m">Підписки</a></li>
+                <li><a href="">Про нас</a></li>
             </ul>
-            <div class="navbar-right">
-                <form style="float: left" method="post" action="/note/show" id="the-basics" class="navbar-form">
-                    <div class="form-group" style="float: left;">
-                        <input style="width: 350px;" name="name" class="typeahead form-control" type="text" placeholder="Користувач" required>
+            <ul class="nav navbar-nav navbar-right">
+
+                <form class="navbar-form navbar-left" role="search" method="post" action="/note/show">
+                    <div class="input-group ">
+                        <input name="name" type="text" class="typeahead form-control" placeholder="Шукати" required>
+                        <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+                </span>
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
                 </form>
-                <ul class="nav navbar-nav ">
-                    <li><a style="font-size: 35px" class="glyphicon glyphicon-log-out" href="/user/logout"></a></li>
-                </ul>
-            </div>
+
+                <li>
+                    <a href="/user/logout">Вийти <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
+
+<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="myModalLabel">Підписки</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <img src='../img/us.jpg' alt="" class="img-rounded center_img sub" >
+                    </div>
+                    <div class="col-xs-3">
+                        <p>Oso</p>
+                    </div>
+                    <div class="col-xs-2 col-xs-offset-3">
+                        <a class="btn btn-primary" href="another_user.html" role="button">Перейти</a>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </div>
+    </div>
+</div>
