--- a/app/views/menu/menu.phtml
+++ b/app/views/menu/menu.phtml
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></a>
+            <span class="logo glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -21,9 +21,9 @@
                 <form class="navbar-form navbar-left" role="search" method="post" action="/note/show">
                     <div class="input-group ">
                         <input name="name" type="text" class="typeahead form-control" placeholder="Шукати" required>
-                        <span class="input-group-btn">
-                    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-                </span>
+                        <span class="search-buttom input-group-btn">
+                            <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+                        </span>
                     </div>
                 </form>
 
