--- a/app/views/menu/menu.phtml
+++ b/app/views/menu/menu.phtml
@@ -13,7 +13,7 @@
             <ul class="nav navbar-nav">
 
                 <li><a href="/">Моя сторінка</a></li>
-                <li><a href="" data-toggle="modal" data-target="#t_and_c_m">Підписки</a></li>
+                <li><a href="#" class="subscription" data-toggle="modal" data-target="#t_and_c_m">Підписки</a></li>
                 <li><a href="">Про нас</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
