--- a/app/views/user/register.phtml
+++ b/app/views/user/register.phtml
@@ -20,7 +20,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <div class="form-group">
-                            <input type="text" name="name" id="last_name" class="form-control input-lg" placeholder="Name" tabindex="2">
+                            <input type="text" name="name" id="last_name" class="form-control input-lg" placeholder="Логін" tabindex="2">
                         </div>
                     </div>
                 </div>
