--- a/app/views/user/register.phtml
+++ b/app/views/user/register.phtml
@@ -14,13 +14,13 @@
                 <hr class="colorgraph">
 
                 <div class="form-group">
-                    <input type="text" name="email" id="email" class="form-control input-lg" placeholder="Email" tabindex="4">
+                    <input type="text" name="email" id="email" class="form-control input-lg" placeholder="Email">
                 </div>
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <div class="form-group">
-                            <input type="text" name="name" id="last_name" class="form-control input-lg" placeholder="Логін" tabindex="2">
+                            <input type="text" name="name" id="last_name" class="form-control input-lg" placeholder="Логін">
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <div class="form-group">
-                            <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Пароль" tabindex="5">
+                            <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Пароль">
                             <span class="eye glyphicon glyphicon-eye-open"></span>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <div class="form-group">
-                            <input type="password" name="confirmPassword" id="password_confirmation" class="form-control input-lg" placeholder="Підтвердіть пароль" tabindex="6">
+                            <input type="password" name="confirmPassword" id="password_confirmation" class="form-control input-lg" placeholder="Підтвердіть пароль">
                             <span class="eye glyphicon glyphicon-eye-open"></span>
                         </div>
                     </div>
