fix bug, list articles, subcription and unsubscription

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -150,6 +150,9 @@ hr{
 .form-group {
     margin: 0 !important;
 }
+.added_file_block h1 {
+    text-align: center;
+}
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
 	
