--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,28 +1,8 @@
 <div class="container">
     <div class="content">
         <div class="row">
-            <div class="col-md-3">
-                <div class="row pic">
-                    <div class="col-md-12">
-                        <?php
-                            if ($user->hasPhoto()) {
-                                $src = $user->getPhoto();
-                            } else {
-                                $gravatar = $this->getDi()->getShared('gravatar');
-                                $src = $gravatar->getAvatar($user->getEmail());
-                            }
-                        ?>
-                        <input type="file" style="display: none;" name="photo"/>
-                        <img src='<?= $src ?>' alt="" class="img-thumbnail center_img">
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12 nick_name">
-                        <?= $user->getName() ?>
-                    </div>
-                </div>
-            </div>
+            <?= $this->view->partial('profile/info') ?>
+            <input type="file" style="display: none;" name="photo"/>
 
             <div class="col-md-9 cont">
                 <div class="row add">
@@ -34,7 +14,7 @@
                     <form action='/note/create' method="post" class="form-signin async">
                         <div class="col-md-10">
                             <div class="form-group description">
-                                <input type="hidden" name="file" value="">
+                                <input type="hidden" name="file" value="test.test">
                                 <input class="form-control input-lg" id="ex1" name="desc" type="text" placeholder="Опис файлу">
                             </div>
                         </div>
@@ -46,34 +26,8 @@
                     </form>
                 </div>
 
-                <div class="wall">
-                    <div class="added_file_block">
-                        <?php
-                            $articles = $user->note;
-                            foreach ($articles as $note):
-                                var_dump($note)
-                        ?>
-                            <div class="row added">
-                                <div class="col-md-1 text-center first">
-                                    <i class="glyphicon glyphicon-floppy-saved"></i>
-                                </div>
-                                <div class="col-md-10">
-                                    <div class="description">
-                                        <?= $note->getText() ?>
-                                    </div>
-                                </div>
-                                <div class="col-md-1 text-center first">
-                                    <form action="/file/download" method="post">
-                                        <input type="hidden" name="fileName" value="<?= $note->getFile() ?>">
-                                        <button type="submit" class="btn btn-default">
-                                            <i class="glyphicon glyphicon-save"></i>
-                                        </button>
-                                    </form>
-                                </div>
-                            </div>
-                        <? endforeach; ?>
-                    </div>
-                </div>
+                <?= $this->view->partial('profile/wall') ?>
+
             </div>
         </div>
     </div>
