--- a/app/views/menu/menu.phtml
+++ b/app/views/menu/menu.phtml
@@ -11,14 +11,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-
                 <li><a href="/">Моя сторінка</a></li>
                 <li><a href="#" class="subscription" data-toggle="modal" data-target="#t_and_c_m">Підписки</a></li>
                 <li><a href="">Про нас</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
 
-                <form class="navbar-form navbar-left" role="search" method="post" action="/note/show">
+                <form class="navbar-form navbar-left" role="search" method="post" action="/anotheruser/show">
                     <div class="input-group ">
                         <input name="name" type="text" class="typeahead form-control" placeholder="Шукати" required>
                         <span class="search-buttom input-group-btn">
@@ -43,18 +42,29 @@
                 <h4 class="modal-title" id="myModalLabel">Підписки</h4>
             </div>
             <div class="modal-body">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img src='../img/us.jpg' alt="" class="img-rounded center_img sub" >
-                    </div>
-                    <div class="col-xs-3">
-                        <p>Oso</p>
-                    </div>
-                    <div class="col-xs-2 col-xs-offset-3">
-                        <a class="btn btn-primary" href="another_user.html" role="button">Перейти</a>
-                    </div>
-                </div>
-                <hr>
+                <?php
+                $test = $user;
+                $articles = $user->note;
+                if ($articles->count() > 0) :
+                    $articles = array_reverse($articles->toArray());
+                    foreach ($articles as $note):
+                        ?>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img src='../img/us.jpg' alt="" class="img-rounded center_img sub" >
+                            </div>
+                            <div class="col-xs-3">
+                                <p>Oso</p>
+                            </div>
+                            <div class="col-xs-2 col-xs-offset-3">
+                                <a class="btn btn-primary" href="another_user.html" role="button">Перейти</a>
+                            </div>
+                        </div>
+                        <hr>
+                    <? endforeach; ?>
+                <? else: ?>
+                    <p>Ви ні на кого не підписані</p>
+                <? endif; ?>
             </div>
         </div>
     </div>
