--- a/app/views/menu/menu.phtml
+++ b/app/views/menu/menu.phtml
@@ -42,7 +42,7 @@
                 <h4 class="modal-title" id="myModalLabel">Підписки</h4>
             </div>
 
-            <?= $this->view->partial('subscribers/subscripe') ?>
+            <?= $this->view->partial('subscribers/subscribe') ?>
         </div>
     </div>
 </div>
