--- a/public/css/common.css
+++ b/public/css/common.css
@@ -12,3 +12,15 @@
 .glyphicon-user{
     padding-right: 10px;
 }
+/*.alert {*/
+    /*width: 400px;*/
+    /*text-align: center;*/
+    /*margin: 0 auto;*/
+    /*z-index: 99999;*/
+/*}*/
+/*.test {*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*width: 100%;*/
+    /*z-index: 999999;*/
+/*}*/
