--- a/app/views/menu/menu.phtml
+++ b/app/views/menu/menu.phtml
@@ -12,7 +12,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Моя сторінка</a></li>
-                <li><a href="#" class="subscription" data-toggle="modal" data-target="#t_and_c_m">Підписки</a></li>
+                <li><a href="#subscribes" class="subscription" data-toggle="modal" data-target="#t_and_c_m">Підписки</a></li>
                 <li><a href="">Про нас</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -33,16 +33,4 @@
         </div>
     </div>
 </nav>
-
-<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Підписки</h4>
-            </div>
-
-            <?= $this->view->partial('subscribers/subscribe') ?>
-        </div>
-    </div>
-</div>
+<?= $this->view->partial('subscribers/subscribe') ?>
