--- a/app/views/subscribers/subscribe.phtml
+++ b/app/views/subscribers/subscribe.phtml
@@ -1,25 +1,14 @@
-<div class="modal-body">
-    <?php
-    $test = $user;
-    $articles = $user->note;
-    if ($articles->count() > 0) :
-        $articles = array_reverse($articles->toArray());
-        foreach ($articles as $note):
-            ?>
-            <div class="row">
-                <div class="col-xs-3">
-                    <img src='../img/us.jpg' alt="" class="img-rounded center_img sub" >
-                </div>
-                <div class="col-xs-3">
-                    <p>Oso</p>
-                </div>
-                <div class="col-xs-2 col-xs-offset-3">
-                    <a class="btn btn-primary" href="another_user.html" role="button">Перейти</a>
-                </div>
+<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="myModalLabel">Підписки</h4>
             </div>
-            <hr>
-        <? endforeach; ?>
-    <? else: ?>
-        <p>Ви ні на кого не підписані</p>
-    <? endif; ?>
+
+            <div class="modal-body" id="subscribe">
+
+            </div>
+        </div>
+    </div>
 </div>
