--- a/app/views/anotheruser/show.phtml
+++ b/app/views/anotheruser/show.phtml
@@ -3,7 +3,7 @@
         <div class="row">
             <?= $this->view->partial('profile/info') ?>
             <?php
-            if (!$user->hasSubscribed($this->session->get('user_identity')['id'], $user->getId())) {
+            if (!$user['user']->hasSubscribed($this->session->get('user_identity')['id'], $user['user']->getId())) {
                 $action = '/anotheruser/subscribe';
                 $text = 'Subscribe';
             } else {
@@ -12,7 +12,7 @@
             }
             ?>
             <form method="post" action="<?= $action ?>" class="buttom async">
-                <input type="hidden" name="subscriber" value="<?= $user->getId()?>">
+                <input type="hidden" name="subscriber" value="<?= $user['user']->getId()?>">
                 <button type="submit">
                     <span><?= $text ?></span>
                 </button>
