--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -5,11 +5,11 @@
                 <div class="row pic">
                     <div class="col-md-12">
                         <?php
-                            if ($user->hasPhoto()) {
-                                $src = $user->getPhoto();
+                            if ($user['user']->hasPhoto()) {
+                                $src = $user['user']->getPhoto();
                             } else {
                                 $gravatar = $this->getDi()->getShared('gravatar');
-                                $src = $gravatar->getAvatar($user->getEmail());
+                                $src = $gravatar->getAvatar($user['user']->getEmail());
                             }
                         ?>
                         <img src='<?= $src ?>' alt="" class="img-thumbnail center_img">
@@ -18,7 +18,7 @@
 
                 <div class="row">
                     <div class="col-md-12 nick_name">
-                        <?= $user->getName() ?>
+                        <?= $user['user']->getName() ?>
                     </div>
                 </div>
                 <input type="file" style="display: none;" name="photo"/>
@@ -52,7 +52,6 @@
         </div>
     </div>
 </div>
-
 <div class="modal fade" id="myModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
