--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -35,7 +35,7 @@
                         <div class="col-md-10">
                             <div class="form-group description">
                                 <input type="hidden" name="file" value="test.test">
-                                <input class="form-control input-lg" id="ex1" name="desc" type="text" placeholder="Опис файлу">
+                                <textarea rows="3" class="form-control input-lg" id="ex1" name="desc" placeholder="Опис файлу"></textarea>
                             </div>
                         </div>
                         <div class="col-md-1 text-center first">
