--- a/app/views/profile/wall.phtml
+++ b/app/views/profile/wall.phtml
@@ -11,7 +11,7 @@
                         <i class="glyphicon glyphicon-floppy-saved"></i>
                     </div>
                     <div class="col-md-10">
-                        <div class="description">
+                        <div class="descriptionText">
                             <?= $note['text'] ?>
                         </div>
                     </div>
