--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -13,15 +13,15 @@
     <?= $this->tag->stylesheetLink('css/dropzone.min.css'); ?>
     <?= $this->tag->stylesheetLink('css/typeahead.css'); ?>
     <?= $this->tag->stylesheetLink('css/common.css'); ?>
-    <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Jura'); ?>
-    <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=Audiowide'); ?>
-    <?= $this->tag->stylesheetLink('https://fonts.googleapis.com/css?family=PT+Sans+Caption:700'); ?>
+    <?= $this->tag->stylesheetLink('//fonts.googleapis.com/css?family=Jura'); ?>
+    <?= $this->tag->stylesheetLink('//fonts.googleapis.com/css?family=Audiowide'); ?>
+    <?= $this->tag->stylesheetLink('//fonts.googleapis.com/css?family=PT+Sans+Caption:700'); ?>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="//oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -32,7 +32,7 @@
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<?= $this->tag->javascriptInclude('https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js') ?>
+<?= $this->tag->javascriptInclude('//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js') ?>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <?= $this->tag->javascriptInclude('js/bootstrap.min.js') ?>
 <?= $this->tag->javascriptInclude('js/dropzone.min.js') ?>
