--- a/app/views/anotheruser/search.phtml
+++ b/app/views/anotheruser/search.phtml
@@ -1,3 +1,16 @@
+<!--<div class="container">-->
+<!--    <div class="content">-->
+<!--        <form class="navbar-form navbar-left" role="search" method="post" action="/anotheruser/show">-->
+<!--            <div class="input-group ">-->
+<!--                <input name="name" type="text" class="typeahead form-control" placeholder="Шукати" required>-->
+<!--                            <span class="search-buttom input-group-btn">-->
+<!--                                <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>-->
+<!--                            </span>-->
+<!--            </div>-->
+<!--        </form>-->
+<!--    </div>-->
+<!--</div>-->
+
 <div class="container">
     <div class="content">
         <?
