--- a/app/views/profile/wall.phtml
+++ b/app/views/profile/wall.phtml
@@ -8,7 +8,7 @@
                 ?>
                 <div class="row added">
                     <div class="col-md-1 text-center first">
-                        <i class="glyphicon glyphicon-floppy-saved"></i>
+                        <img src="<?= $note['expansion'] ?>">
                     </div>
                     <div class="col-md-10">
                         <div class="descriptionText">
@@ -17,8 +17,9 @@
                     </div>
                     <div class="col-md-1 text-center first">
                         <form action="/file/download" method="post">
-                            <input type="hidden" name="fileName" value="<?= $note['file'] ?>">
-                            <button title="Назва файла <?= $note['file'] ?>" type="submit" class="btn btn-default">
+                            <input type="hidden" name="fileName" value="<?= $note['fileName'] ?>">
+                            <input type="hidden" name="file" value="<?= $note['file'] ?>">
+                            <button title="Назва файла <?= $note['fileName'] ?>" type="submit" class="btn btn-default">
                                 <i class="glyphicon glyphicon-save"></i>
                             </button>
                         </form>
